# AiMessages

./: .env.example  .gitignore  README.md  afk.py  pyproject.toml
ardamessage/: main.py  messages.db
ardamessage/prompts/: message_analyze.py
ardamessage/services/: chatbot.py  get_messages.py  send_message.py
